--- a/.env.testing
+++ b/.env.testing
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-container
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_stations_test
 DB_USERNAME=dev
