--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel-Stations
 APP_ENV=local
-APP_KEY=
+APP_KEY=APP_KEY=base64:yBV3GbeNJ6aHiZARxX9dVV2VebEWaWF9sBZeOqyBUIk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
